can't figure out why my validation isn't working, but besides that I think it's fine
